--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.linkedin.com/in/patrick-clover-1b8857124/">Patrick Clover</a>.
     </p>
   </footer>
 </body>
