--- a/index.html
+++ b/index.html
@@ -10,28 +10,34 @@
 <body>
   <main>
     <header>
-      <h1>Join our community</h1>
-      <h2>30-day, hassle-free money back guarantee</h2>
-      <p>Gain access to our full library of tutorials along with expert code reviews. 
-        Perfect for any developers who are serious about honing their skills.</p>
+      <div>
+        <h1>Join our community</h1>
+        <h2>30-day, hassle-free money back guarantee</h2>
+        <p>Gain access to our full library of tutorials along with expert code reviews. 
+          Perfect for any developers who are serious about honing their skills.</p>
+      </div>
     </header>
     <section>
-      <h3>Monthly Subscription</h3>
-      <h4>&dollar;29 <span>per month</span></h4>
-      <p>Full access for less than &dollar;1 a day</p>
-      <button>Sign Up</button>
+      <div>
+        <h3>Monthly Subscription</h3>
+        <h4>&dollar;29 <span>per month</span></h4>
+        <p>Full access for less than &dollar;1 a day</p>
+        <button>Sign Up</button>
+      </div>
     </section>
     <aside>
-      <h3>Why Us</h3>
-      <ul>
-        <li>Tutorials by industry experts</li>
-        <li>Peer &amp; expert code review</li>
-        <li>Coding exercises</li>
-        <li>Access to our GitHub repos</li>
-        <li>Community forum</li>
-        <li>Flashcard decks</li>
-        <li>New videos every week</li>
-      </ul>
+      <div>
+        <h3>Why Us</h3>
+        <ul>
+          <li>Tutorials by industry experts</li>
+          <li>Peer &amp; expert code review</li>
+          <li>Coding exercises</li>
+          <li>Access to our GitHub repos</li>
+          <li>Community forum</li>
+          <li>Flashcard decks</li>
+          <li>New videos every week</li>
+        </ul>
+      </div>
     </aside>
   </main>
   <footer>
