--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Single Price Grid Component</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <main>
-    <header>
-      <div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Single Price Grid Component</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <main>
+      <header>
         <h1>Join our community</h1>
         <h2>30-day, hassle-free money back guarantee</h2>
-        <p>Gain access to our full library of tutorials along with expert code reviews. 
-          Perfect for any developers who are serious about honing their skills.</p>
-      </div>
-    </header>
-    <section>
-      <div>
+        <p>
+          Gain access to our full library of tutorials along with expert code
+          reviews. Perfect for any developers who are serious about honing their
+          skills.
+        </p>
+      </header>
+      <section>
         <h3>Monthly Subscription</h3>
         <h4>&dollar;29 <span>per month</span></h4>
         <p>Full access for less than &dollar;1 a day</p>
         <button>Sign Up</button>
-      </div>
-    </section>
-    <aside>
-      <div>
+      </section>
+      <aside>
         <h3>Why Us</h3>
         <ul>
           <li>Tutorials by industry experts</li>
@@ -37,14 +40,18 @@
           <li>Flashcard decks</li>
           <li>New videos every week</li>
         </ul>
-      </div>
-    </aside>
-  </main>
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.linkedin.com/in/patrick-clover-1b8857124/">Patrick Clover</a>.
-    </p>
-  </footer>
-</body>
+      </aside>
+    </main>
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://www.linkedin.com/in/patrick-clover-1b8857124/"
+          >Patrick Clover</a
+        >.
+      </p>
+    </footer>
+  </body>
 </html>
