--- a/index.html
+++ b/index.html
@@ -13,35 +13,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main>
-      <header>
-        <h1>Join our community</h1>
-        <h2>30-day, hassle-free money back guarantee</h2>
-        <p>
-          Gain access to our full library of tutorials along with expert code
-          reviews. Perfect for any developers who are serious about honing their
-          skills.
-        </p>
-      </header>
-      <section>
-        <h3>Monthly Subscription</h3>
-        <h4>&dollar;29 <span>per month</span></h4>
-        <p>Full access for less than &dollar;1 a day</p>
-        <button>Sign Up</button>
-      </section>
-      <aside>
-        <h3>Why Us</h3>
-        <ul>
-          <li>Tutorials by industry experts</li>
-          <li>Peer &amp; expert code review</li>
-          <li>Coding exercises</li>
-          <li>Access to our GitHub repos</li>
-          <li>Community forum</li>
-          <li>Flashcard decks</li>
-          <li>New videos every week</li>
-        </ul>
-      </aside>
-    </main>
+    Join our community 30-day, hassle-free money back guarantee Gain access to
+    our full library of tutorials along with expert code reviews. Perfect for
+    any developers who are serious about honing their skills. Monthly
+    Subscription &dollar;29 per month Full access for less than &dollar;1 a day
+    Sign Up Why Us Tutorials by industry experts Peer &amp; expert code review
+    Coding exercises Access to our GitHub repos Community forum Flashcard decks
+    New videos every week
     <footer>
       <p class="attribution">
         Challenge by
