--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <main>
+      <header>
+        <h1>Join our community</h1>
+        <h2>30-day, hassle-free money back guarantee</h2>
+        <p>
+          Gain access to our full library of tutorials along with expert code
+          reviews. Perfect for any developers who are serious about honing their
+          skills.
+        </p>
+      </header>
+      <section></section>
+      <aside></aside>
+    </main>
     <footer>
       <p class="attribution">
         Challenge by
