finished styling of the why us section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="./images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Single Price Grid Component</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -23,8 +27,26 @@
           skills.
         </p>
       </header>
-      <section></section>
-      <aside></aside>
+      <div>
+        <section>
+          <h2>Monthly Subscription</h2>
+          <h3>&dollar;29 <span>per month</span></h3>
+          <p>Full access for less than &dollar;1 a day</p>
+          <button>Sign Up</button>
+        </section>
+        <aside>
+          <h4>Why Us</h4>
+          <ul>
+            <li><a href="#">Tutorials by industry experts</a></li>
+            <li><a href="#">Peer & expert code review</a></li>
+            <li><a href="#">Coding exercises</a></li>
+            <li><a href="#">Access to our GitHub Repos</a></li>
+            <li><a href="#">Community forum</a></li>
+            <li><a href="#">Flashcard decks</a></li>
+            <li><a href="#">New videos every week</a></li>
+          </ul>
+        </aside>
+      </div>
     </main>
     <footer>
       <p class="attribution">
