fixed width sizing issue

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           skills.
         </p>
       </header>
-      <div>
+      <div id="flex_container">
         <section>
           <h2>Monthly Subscription</h2>
           <h3>&dollar;29 <span>per month</span></h3>
