set up initial html structure

--- a/index.html
+++ b/index.html
@@ -17,6 +17,35 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <main>
+      <header>
+        <h1>Join our community</h1>
+        <h3>30-day, hassle-free money back guarantee</h3>
+        <p>
+          Gain accecss to our full library of tutorials along with exper code
+          reviews. Perfect for any developers who are serious about honing their
+          skills
+        </p>
+      </header>
+      <section>
+        <h2>Monthly Subscription</h2>
+        <h3>&dollar;29 per month</h3>
+        <p>Full access for less than &dollar;1 a day</p>
+        <button>Sign up</button>
+      </section>
+      <aside>
+        <h3>Why Us</h3>
+        <ul>
+          <li><a href="#">Tutorials by industry experts</a></li>
+          <li><a href="#">Peer &amp; expert code review</a></li>
+          <li><a href="#">Coding exercises</a></li>
+          <li><a href="#">Access to our GitHub repos</a></li>
+          <li><a href="#">Community forum</a></li>
+          <li><a href="#">Flashcard decks</a></li>
+          <li><a href="#">New videos every week</a></li>
+        </ul>
+      </aside>
+    </main>
     <footer>
       <p class="attribution">
         Challenge by
