added basic styling for fonts, spacing, etc.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       </header>
       <section>
         <h2>Monthly Subscription</h2>
-        <h3>&dollar;29 per month</h3>
+        <div id="subscription_price">
+          <h3>&dollar;29</h3>
+          <p>per month</p>
+        </div>
         <p>Full access for less than &dollar;1 a day</p>
         <button>Sign up</button>
       </section>
